Fixed header link gap, style and added padding

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
     justify-content: space-evenly;
     align-items: center;
     background-color: #1F2937;
+    padding: 15px;
 }
 
 .header-logo{
@@ -25,5 +26,12 @@ ul{
     margin: 0;
     padding: 0;
     display: flex;
+    gap: 20px;
 }
+   
 
+ul a{
+    text-decoration: none;
+    font-size: 18px;
+    color: #E5E7EB;
+}
